# animaui

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.toml  flake.nix
crates/vibepanel/: Cargo.toml  build.rs
crates/vibepanel-core/: Cargo.toml
crates/vibepanel-core/src/: config.rs  lib.rs  theme.rs
crates/vibepanel-core/tests/: config_integration.rs
crates/vibepanel/src/: bar.rs  bar_tests.rs  dock.rs  layout_math.rs  main.rs  popover_registry.rs  sectioned_bar.rs  sectioned_bar_tests.rs  services.rs  styles.rs  theme_vars.rs  ui_regression_test_support.rs
crates/vibepanel/src/services/: audio.rs  background_effect.rs  bar_manager.rs  battery.rs  battery_alert.rs  config_manager.rs  desktop_notification.rs  gpu.rs  icons.rs  ipc.rs  media.rs  notification.rs  sleep_watcher.rs  surfaces.rs  system.rs  tooltip.rs  tray.rs  vpn.rs  vpn_secret_agent.rs  wallpaper.rs  weather.rs  window_list.rs  workspace.rs
crates/vibepanel/src/services/compositor/: hyprland.rs  manager.rs  mango.rs  mod.rs  niri.rs  sway.rs  types.rs  xkb_names.rs
crates/vibepanel/src/widgets/: base.rs  battery.rs  calendar_popover.rs  clock.rs  cpu.rs  custom.rs  gpu.rs  keyboard_layout.rs  launcher.rs  layer_shell_popover.rs  marquee_label.rs  media.rs  media_components.rs  media_popover.rs  media_visualizer.rs  media_window.rs  memory.rs  mod.rs  network_speed.rs  notifications.rs  notifications_common.rs  notifications_popover.rs  notifications_toast.rs  notifications_toast_tests.rs  osd.rs  osd_tests.rs  scale_box.rs  spacer.rs  system_popover.rs  taskbar.rs  tray.rs  updates.rs  weather.rs  weather_popover.rs  window_title.rs  workspaces.rs
crates/vibepanel/src/widgets/css/: bar.rs  base.rs  buttons.rs  calendar.rs  dock.rs  media.rs  mod.rs  notifications.rs  osd.rs  quick_settings.rs  system.rs  weather.rs
crates/vibepanel/src/widgets/quick_settings/: audio_card.rs  bar_widget.rs  bluetooth_card.rs  components.rs  mic_card.rs  network_card.rs  power_card.rs  ui_helpers.rs  (+3 more)
(+13 files in other folders)
