[package]
name = "vibepanel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A modern Wayland status bar"

[[bin]]
name = "vibepanel"
path = "src/main.rs"

[dependencies]
vibepanel-core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
gtk4 = { workspace = true }
pango = { workspace = true }
gtk4-layer-shell = { workspace = true }
gdk4-wayland = { workspace = true }
wayland-client = { workspace = true }
wayland-backend = { workspace = true }
wayland-protocols = { workspace = true }
wayland-scanner = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
libpulse-binding = { workspace = true }
libc = { workspace = true }
udev = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
nvml-wrapper = { workspace = true }
parking_lot = { workspace = true }
minreq = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
toml = { workspace = true }

[build-dependencies]
wayland-scanner = { workspace = true }
